Move JvmArgs main build file